@@ -421,12 +421,6 @@ operator|new
 name|DefaultSimilarity
 argument_list|()
 decl_stmt|;
-DECL|field|rewrittenQuery
-name|Query
-name|rewrittenQuery
-init|=
-literal|null
-decl_stmt|;
 DECL|field|fieldVals
 name|ArrayList
 argument_list|<
@@ -442,10 +436,6 @@ decl_stmt|;
 DECL|field|analyzer
 name|Analyzer
 name|analyzer
-decl_stmt|;
-DECL|field|q
-name|ScoreTermQueue
-name|q
 decl_stmt|;
 DECL|field|MAX_VARIANTS_PER_TERM
 name|int
@@ -727,14 +717,6 @@ name|Analyzer
 name|analyzer
 parameter_list|)
 block|{
-name|q
-operator|=
-operator|new
-name|ScoreTermQueue
-argument_list|(
-name|maxNumTerms
-argument_list|)
-expr_stmt|;
 name|this
 operator|.
 name|analyzer
@@ -1094,6 +1076,9 @@ name|reader
 parameter_list|,
 name|FieldVals
 name|f
+parameter_list|,
+name|ScoreTermQueue
+name|q
 parameter_list|)
 throws|throws
 name|IOException
@@ -1698,60 +1683,34 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|rewrittenQuery
-operator|!=
-literal|null
-condition|)
-block|{
-return|return
-name|rewrittenQuery
-return|;
-block|}
+name|ScoreTermQueue
+name|q
+init|=
+operator|new
+name|ScoreTermQueue
+argument_list|(
+name|maxNumTerms
+argument_list|)
+decl_stmt|;
 comment|//load up the list of possible terms
 for|for
 control|(
-name|Iterator
-argument_list|<
-name|FieldVals
-argument_list|>
-name|iter
-init|=
-name|fieldVals
-operator|.
-name|iterator
-argument_list|()
-init|;
-name|iter
-operator|.
-name|hasNext
-argument_list|()
-condition|;
-control|)
-block|{
 name|FieldVals
 name|f
-init|=
-name|iter
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
+range|:
+name|fieldVals
+control|)
+block|{
 name|addTerms
 argument_list|(
 name|reader
 argument_list|,
 name|f
+argument_list|,
+name|q
 argument_list|)
 expr_stmt|;
 block|}
-comment|//clear the list of fields
-name|fieldVals
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
 name|BooleanQuery
 operator|.
 name|Builder
@@ -2063,22 +2022,11 @@ block|}
 block|}
 comment|//TODO possible alternative step 3 - organize above booleans into a new layer of field-based
 comment|// booleans with a minimum-should-match of NumFields-1?
-name|Query
-name|q
-init|=
+return|return
 name|bq
 operator|.
 name|build
 argument_list|()
-decl_stmt|;
-name|this
-operator|.
-name|rewrittenQuery
-operator|=
-name|q
-expr_stmt|;
-return|return
-name|q
 return|;
 block|}
 comment|//Holds info for a fuzzy term variant - initially score is set to edit distance (for ranking best
